--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ ext {
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.0.3'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -38,7 +38,7 @@ tasks.named('test') {
 }
 
 bootJar {
-    archivesBaseName = 'eurekaService'
-    archiveFileName = 'eurekaService.jar'
+    archivesBaseName = 'eureka-server'
+    archiveFileName = 'eureka-server.jar'
     archiveVersion = "0.0.1"
 }
