refactor: 테스트 시 eureka 서버에 빠른 인스턴스 등록 위한 설정 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,3 +10,7 @@ eureka:
     region: ap-northeast-2
     register-with-eureka: false  # 자기 자신 등록 X
     fetch-registry: false        # Eureka 서버가 다른 Eureka 서버로부터 서비스 목록을 가져오지 않도록
+
+  server:
+    enable-self-preservation: true                 # 운영에서는 보호 모드 켜기 (기본값)
+    eviction-interval-timer-in-ms: 60000           # 기본값 60초 (1분마다 검사)
