--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,5 +8,9 @@ spring:
 eureka:
   client:
     region: ap-northeast-2
-    register-with-eureka: false  # 자기 자신 등록 X
-    fetch-registry: false        # Eureka 서버가 다른 Eureka 서버로부터 서비스 목록을 가져오지 않도록
+    register-with-eureka: false  # Eureka 서버가 자기 자신을 서비스로 등록하지 않음
+    fetch-registry: false        # 다른 Eureka 서버에서 서비스 목록을 받아오지 않음 (단독 eureka)
+
+  server:
+    enable-self-preservation: false                # 인스턴스 비정상 제거를 빠르게 수행하기 위해 보호 모드 비활성화
+    eviction-interval-timer-in-ms: 10000           # 비정상 인스턴스 제거 주기를 10초로 설정 (기본값은 60초)
